Fix header auth overlap

--- a/css/style.css
+++ b/css/style.css
@@ -437,11 +437,36 @@ ol {
 .header__right {
 	text-align: right;
 	padding: 30px 0 27px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
+	justify-content: flex-end;
+	gap: 16px;
+	min-width: 0;
 }
 
 .header__right__auth {
-	display: inline-block;
-	margin-right: 25px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
+	justify-content: flex-end;
+	-ms-flex-wrap: nowrap;
+	flex-wrap: nowrap;
+	-webkit-box-flex: 1;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	min-width: 0;
+	margin-right: 0;
 }
 
 .header__right__auth a {
@@ -449,6 +474,7 @@ ol {
 	color: #666666;
 	position: relative;
 	margin-right: 8px;
+	white-space: nowrap;
 }
 
 .header__right__auth a:last-child {
@@ -468,8 +494,20 @@ ol {
 }
 
 .header__right__auth--logged-in {
-	display: inline-block;
-	margin-right: 25px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
+	justify-content: flex-end;
+	-webkit-box-flex: 1;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	min-width: 0;
+	margin-right: 0;
 }
 
 .auth-user-greeting {
@@ -478,11 +516,12 @@ ol {
 	position: relative;
 	margin-right: 8px;
 	display: inline-block;
-	max-width: 140px;
+	max-width: 110px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	vertical-align: middle;
+	flex-shrink: 1;
 }
 
 .auth-user-greeting:after {
@@ -494,7 +533,14 @@ ol {
 }
 
 .header__right__widget {
-	display: inline-block;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
 }
 
 .header__right__widget li {
@@ -502,7 +548,7 @@ ol {
 	display: inline-block;
 	font-size: 18px;
 	color: #111111;
-	margin-right: 20px;
+	margin-right: 14px;
 	cursor: pointer;
 }
 
@@ -525,9 +571,9 @@ ol {
 }
 
 .nav-cart-label {
-	font-size: 11px;
+	font-size: 10px;
 	font-weight: 700;
-	letter-spacing: 0.14em;
+	letter-spacing: 0.12em;
 	text-transform: uppercase;
 	line-height: 1;
 }
